edit some number
added all pages. added new div to each one. need to complete div with
images and text. added countDown stuff idk if it'll work

--- a/css/style.css
+++ b/css/style.css
@@ -41,3 +41,16 @@ ul.menu li{
 	border: inset;
 }
 
+.description {
+	
+	background-color: #999999;
+}
+
+.body {
+	background-color: #383838;
+	font-family: "Lucida Console";
+	margin-left: auto;
+    margin-right: auto;
+    width: 6em
+	
+}
